--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -13,20 +13,23 @@
         android:id="@+id/play_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|bottom"
         android:layout_marginBottom="99dp"
         android:text="@string/play"/>
 
+    <RadioButton
+        android:id="@+id/_3x3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:checked="false"
+        android:text="@string/_3x3_button"/>
+
     <RadioGroup
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <RadioButton
-            android:id="@+id/human_v_human"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:checked="false"
-            android:text="@string/human_v_human_button"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal|top">
 
         <RadioButton
             android:id="@+id/human_v_random"
@@ -34,15 +37,18 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:checked="false"
+            android:onClick="onRadioButtonClicked"
             android:text="@string/human_v_computer"/>
-    </RadioGroup>
 
-    <RadioButton
-        android:id="@+id/_3x3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:checked="false"
-        android:text="@string/_3x3_button"/>
+        <RadioButton
+            android:id="@+id/human_v_human"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:checked="false"
+            android:onClick="onRadioButtonClicked"
+            android:text="@string/human_v_human_button"/>
+
+    </RadioGroup>
 
 </FrameLayout>
