--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -32,15 +32,6 @@
         android:layout_gravity="center_horizontal|top">
 
         <RadioButton
-            android:id="@+id/human_v_random"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:checked="false"
-            android:onClick="onRadioButtonClicked"
-            android:text="@string/human_v_computer"/>
-
-        <RadioButton
             android:id="@+id/human_v_human"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -48,6 +39,42 @@
             android:checked="false"
             android:onClick="onRadioButtonClicked"
             android:text="@string/human_v_human_button"/>
+
+        <RadioButton
+            android:id="@+id/human_v_random"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:checked="false"
+            android:onClick="onRadioButtonClicked"
+            android:text="@string/human_v_random_computer"/>
+
+        <RadioButton
+            android:id="@+id/random_v_human"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:checked="false"
+            android:onClick="onRadioButtonClicked"
+            android:text="@string/random_computer_v_human"/>
+
+        <RadioButton
+            android:id="@+id/human_v_perfect"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:checked="false"
+            android:onClick="onRadioButtonClicked"
+            android:text="@string/human_v_perfect_computer"/>
+
+        <RadioButton
+            android:id="@+id/perfect_v_human"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:checked="false"
+            android:onClick="onRadioButtonClicked"
+            android:text="Perfect Computer v Human"/>
 
     </RadioGroup>
 
